# scene-dsl

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/models/: distributions.scenex  kinova_gen3_7dof.ktree  lab.scene  lab.scenex  robotiq_2f85.ktree
src/scene_dsl/: __init__.py  dot.py  gens.py  langs.py  registration.py
src/scene_dsl/classes/: common.py  distrib.py  geom.py  ktree.py  scene.py  scenex.py  sensors.py
src/scene_dsl/grammars/: base.tx  distrib.tx  geom.tx  ktree.tx  scene.tx  scenex.tx  sensors.tx
src/scene_dsl/rdf/: common.py  distrib.py  geom.py  ktree.py  scene.py  scenex.py  sensors.py
src/scene_dsl/rdf_parser/: scenex.py
tests/: test_common.py  test_distrib.py  test_dot.py  test_geom_ktree.py  test_scene.py  test_scene_dsl.py  test_sensor.py
